...
  }

  return (
    <ScreenContainer
      contentProps={{ justify: 'space-between', pb: '$0' }}
      scrollable
      testID="auth-screen"
    >
      <YStack flex={1} gap="$6" pt="$8" justify="space-between">
        <YStack gap="$8">
          <AuthHeader
            description={t('auth.subtitle')}
            heroLogoColor={heroLogoColor}
...
              <PrimaryButton
                disabled={actionsDisabled}
                emphasis="outline"
                onPress={() => {
                  router.push(authRoutes.unlock)
                }}
                testID="auth-open-unlock-button"
                tone="neutral"
              >
                <XStack gap="$2" items="center" justify="center">
                  <LockKeyhole
                    color={actionsDisabled ? '$color10' : '$color11'}
                    size={18}
...
