appId: com.voltafrontend.app
---
- runFlow:
    file: ../shared/ensure_ready_user.yaml

- openLink: 'voltafrontend:///barcode?__e2eQueryState=error'

- extendedWaitUntil:
    visible:
      id: barcode-screen-error-state
    timeout: 30000
- tapOn:
    id: barcode-screen-error-state-retry-button
- extendedWaitUntil:
    visible:
      id: barcode-screen
    timeout: 30000
