appId: com.voltafrontend.app
---
- runFlow:
    file: ../shared/ensure_ready_user.yaml

- openLink: 'voltafrontend:///?__e2eQueryState=error'

- extendedWaitUntil:
    visible:
      id: home-dashboard-screen-error-state
    timeout: 30000
- tapOn:
    id: home-dashboard-screen-error-state-retry-button
- extendedWaitUntil:
    visible:
      id: home-dashboard-screen
    timeout: 30000
